# wrazz

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  delete-main-tag.yml
extensions/word-count/: Cargo.toml
extensions/word-count/src/: lib.rs
modules/wrazz-backend/: Cargo.toml
modules/wrazz-backend/src/: http_backend.rs  lib.rs  local_backend.rs  main.rs  routes.rs  store.rs
modules/wrazz-core/: Cargo.toml
modules/wrazz-core/src/: backend.rs  entry.rs  lib.rs  store.rs
modules/wrazz-desktop/src-tauri/: Cargo.toml  tauri.conf.json
modules/wrazz-desktop/src-tauri/src/: lib.rs  main.rs
modules/wrazz-editor/: package.json  tsconfig.json  vite.config.ts
modules/wrazz-editor/src/: LinkOverlay.tsx  WrazzEditor.css  WrazzEditor.tsx  index.ts  modifiers.ts  vite-env.d.ts
modules/wrazz-extensions/: Cargo.toml
modules/wrazz-extensions/src/: host.rs  types.rs
modules/wrazz-frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
modules/wrazz-frontend/src/: App.tsx  index.css  types.ts
modules/wrazz-frontend/src/api/: admin.ts  auth.ts  entries.ts  files.ts  user.ts
modules/wrazz-frontend/src/components/: CommandBar.tsx  ContextMenu.tsx  Editor.tsx  EntryList.tsx  FileList.tsx  FileTree.tsx  LoginPage.tsx  StatusBar.tsx
modules/wrazz-frontend/src/components/modals/: AdminModal.tsx  ConfirmModal.tsx  Modal.tsx  ProfileModal.tsx
modules/wrazz-frontend/src/icons/: index.tsx
modules/wrazz-frontend/src/lib/: actions.ts  context.ts  drafts.ts
modules/wrazz-midend/: Cargo.toml
modules/wrazz-midend/src/: lib.rs  main.rs  routes.rs
modules/wrazz-server/: Cargo.toml
modules/wrazz-server/migrations/: 20260101000000_init.sql  20260421000000_add_workspaces.sql  20260427000000_add_oidc_config.sql  20260428000000_add_user_email.sql
modules/wrazz-server/src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  oidc.rs  routes.rs  state.rs  store_cache.rs
modules/wrazz-server/src/routes/: admin.rs  auth.rs  export.rs  files.rs  mod.rs  oidc.rs  user.rs
scripts/: semver-manage
wit/: world.wit
