[workspace]
members = [
    "modules/wrazz-core",
    "modules/wrazz-server",
    "modules/wrazz-extensions",
    "modules/wrazz-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Greg Fraley <greg@fraley.dev>"]

[workspace.dependencies]
wrazz-core = { path = "modules/wrazz-core" }
wrazz-extensions = { path = "modules/wrazz-extensions" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
