[workspace]
members = [
    "modules/wrazz-core",
    "modules/wrazz-midend",
    "modules/wrazz-backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Greg Fraley <greg@fraley.dev>"]

[workspace.dependencies]
wrazz-core = { path = "modules/wrazz-core" }
wrazz-backend = { path = "modules/wrazz-backend" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
