[workspace]
members = [
    "modules/wrazz-core",
    "modules/wrazz-backend",
    "modules/wrazz-server",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Greg Fraley <greg@fraley.dev>"]

[workspace.dependencies]
wrazz-core = { path = "modules/wrazz-core" }
wrazz-backend = { path = "modules/wrazz-backend" }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
