[package]
name = "wrazz-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "wrazz_backend"
path = "src/lib.rs"

[[bin]]
name = "wrazz-backend"
path = "src/main.rs"

[dependencies]
wrazz-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
serde_yaml_ng = "0.10"
walkdir = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
