[package]
name = "wrazz-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "wrazz_backend"
path = "src/lib.rs"

[[bin]]
name = "wrazz-backend"
path = "src/main.rs"

[dependencies]
wrazz-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde_yaml_ng = "0.10"
walkdir = "2"
