[package]
name = "wrazz-midend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wrazz-midend"
path = "src/main.rs"

[dependencies]
wrazz-core = { workspace = true }
wrazz-backend = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
