[package]
name = "wrazz-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wrazz-server"
path = "src/main.rs"

[dependencies]
wrazz-core = { workspace = true }
wrazz-extensions = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
