[package]
name = "wrazz-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "wrazz_server"
path = "src/lib.rs"

[[bin]]
name = "wrazz-server"
path = "src/main.rs"

[dependencies]
wrazz-core = { workspace = true }
wrazz-backend = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
