[package]
name = "wrazz-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "wrazz_server"
path = "src/lib.rs"

[[bin]]
name = "wrazz-server"
path = "src/main.rs"

[dependencies]
wrazz-core = { workspace = true }
wrazz-backend = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { workspace = true, features = ["fs"] }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
argon2 = "0.5"
openidconnect = { version = "3", features = ["reqwest"] }
reqwest = { workspace = true }
