[package]
name = "wrazz-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "wrazz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wrazz-desktop"
path = "src/main.rs"

[dependencies]
wrazz-core = { workspace = true }
wrazz-extensions = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
